sonarqube/ingress-sonardashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sonarqube
  namespace: sonarqube
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: sonarqube.mandu.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sonar-svc
              port:
                number: 9000
